# AdventOfCode2022

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day9.rs  dayx.rs  lib.rs  line_manager.rs  main.rs  shared.rs  types.rs
src/day7/: mod.rs  types.rs
src/day8/: mod.rs  types.rs
